--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "image-loader": "0.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.8",
     "webpack-dev-server": "^1.12.1"
   }
